# jupyterhub-nomad-spawner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  hostpath.nomad  jupyter-hub.nomad  jupyterhub_config.py  pyproject.toml
.github/workflows/: docker-image.yml  release.yml
example/jupyterhub/: .terraform.lock.hcl  job.hcl.j2  jupyterhub.nomad  jupyterhub_config.py  main.tf  notebook_demo.py
example/keycloak/: .terraform.lock.hcl  keycloak.nomad  main.tf
example/nomad/: nomad.conf
example/rocketduckcsi/: main.tf  rocketduck-controller.nomad  rocketduck-node.nomad
jupyterhub_nomad_spawner/: job_factory.py  job_launcher.py  job_options_factory.py  spawner.py
jupyterhub_nomad_spawner/consul/: consul_service.py
jupyterhub_nomad_spawner/nomad/: nomad_model.py  nomad_service.py
jupyterhub_nomad_spawner/templates/: form.html.j2  job.hcl.j2
tests/: conftest.py  hub.nomad  test_job_factory.py  test_job_options_factory.py  test_jupyterhub_nomad_spawner.py  test_spawner.py  utils.py
tests/fixtures/: test_create_form.html  test_create_job.nomad  test_create_job.v2.nomad  test_create_job_with_csi_volume.nomad  test_create_job_with_ephemeral_disk.nomad  test_create_job_with_host_volume.nomad
tests/integration/: conftest.py  hub.nomad  test_jupyterhub_nomad_spawner.py
tests/nomad/: test_nomad_service.py
