[tool.poetry]
name = "jupyterhub-nomad-spawner"
version = "0.1.0"
description = ""
authors = ["Max Fröhlich <maxbruchmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
traitlets = "^5.1.1"
jupyterhub = "^2.2.2"
notebook = "^6.4.11"
aiohttp = "^3.8.1"
pydantic = "^1.9.0"
python-consul2 = "^0.1.5"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
flake8 = "^4.0.1"
netifaces = "^0.11.0"
pytest-asyncio = "^0.18.3"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."jupyterhub.spawners"]
"nomad-spawner" = "jupyterhub_nomad_spawner.spawner:NomadSpawner"

