[tool.poetry]
name = "jupyterhub-nomad-spawner"
version = "0.0.0"
description = ""
authors = ["Max Fröhlich <maxbruchmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
traitlets = "^5.1.1"
jupyterhub = "^2.2.2"
notebook = "^6.4.11"
pydantic = "^1.9.0"
tenacity = "^8.0.1"
httpx = "^0.23.0"
attrs = "^21.4.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest-asyncio = "^0.18.3"
requests = "^2.27.1"
datamodel-code-generator = "^0.13.0"
poethepoet = "^0.13.1"
mypy = "^0.961"
respx = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry.plugins."jupyterhub.spawners"]
"nomad-spawner" = "jupyterhub_nomad_spawner.spawner:NomadSpawner"

[tool.poe.tasks]
gen-nomad-model = "datamodel-codegen --url https://raw.githubusercontent.com/hashicorp/nomad-openapi/main/v1/openapi.yaml --output jupyterhub_nomad_spawner/nomad_service/nomad_model.py"
format = "black ."
mypy = "mypy ."
flake8 = "flake8 ."
check = ["format", "mypy", "flake8"]


[tool.mypy]
exclude = [
    "^jupyterhub_nomad_spawner/nomad/nomad_model\\.py$",
]
[tool.isort]
profile = "black"


[tool.poetry-dynamic-versioning]
enable = true
