[tool.poetry]
name = "jupyterhub-nomad-spawner"
version = "0.0.0"
description = "A JupyterHub Spawner that launches isolated notebooks as job"
authors = ["Max Fröhlich <maxbruchmann@gmail.com>"]
readme = "README.md"
packages = [
    { include = "jupyterhub_nomad_spawner" },
]


[tool.poetry.dependencies]
python = "~3.10"
traitlets = "^5.1.1"
jupyterhub = "^4.0.0"
#notebook = "^6.4.11"
pydantic = "^1.9.0"
tenacity = "^8.0.1"
httpx = "^0.24.0"
attrs = "^23.1.0"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-asyncio = "^0.21.0"
requests = "^2.27.1"
poethepoet = "^0.19.0"
mypy = "^1.2.0"
respx = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry.plugins."jupyterhub.spawners"]
"nomad-spawner" = "jupyterhub_nomad_spawner.spawner:NomadSpawner"

[tool.poe.tasks]
gen-nomad-model = "datamodel-codegen --url https://raw.githubusercontent.com/hashicorp/nomad-openapi/main/v1/openapi.yaml --output jupyterhub_nomad_spawner/nomad_service/nomad_model.py"
format = "black ."
mypy = "mypy ."
flake8 = "flake8 ."
check = ["format", "mypy", "flake8"]


[tool.mypy]
exclude = [
    "^jupyterhub_nomad_spawner/nomad/nomad_model\\.py$",
]
[tool.isort]
profile = "black"


[tool.poetry-dynamic-versioning]
enable = true
